tests: adapt tests to new hateoas principles